--- a/css/master.css
+++ b/css/master.css
@@ -1,13 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Belanosima&family=Poppins:wght@300&display=swap');
 
-    *{
-        font-family: 'Poppins', sans-serif;
-    }
+* {
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
 
-    h1,h2,h3,h4,h5,h6{
-        font-family: 'Belanosima', sans-serif;
-    }
+img {
+    width: 100%;
+}
 
-#logo{
-    width: 10%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Belanosima', sans-serif;
+}
+
+#encabezado {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    background-color: #1f8a70;
+    width: 100%;
+    margin-top: -10px;
+}
+
+#logo {
+    width: 12%;
+    margin: 0%;
+    display: flex;
+}
+
+#opciones {
+    display: flex;
+    justify-content: space-between;
+}
+
+#banner {
+    padding: 100px;
+    padding-top: 85px;
+    width: 1500px;
+    margin: auto;
+
+}
+
+#quienesSomos {
+    display: flex;
+
+}
+
+section#quienesSomos img {
+    width: 24%;
 }
